AngularApp/projects/app-service-diagnostics/src/app/shared/components/daas/cpu-monitoring/cpu-monitoring-configuration/cpu-monitoring-configuration.component.scss
.label-header {
    font-size: initial;
    color: #0058ad;
}

.input-row {
    min-height: 120px;
}

.tile-icon {
    font-size: xx-large;
    color: #0058ad;
    min-width: 30px;
}

.summary-box {
    padding: 10px;
    margin-left: 15px;
    background-color: rgba(44, 163, 216, 0.1);
    border: 1px Solid #0058ad;
}

.summary-title {
    margin-left: 15px;
    background: #0058ad;
    width: 125px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    padding: 2px;
    padding-left: 5px;
    color: whitesmoke;
}

.media-body {
    padding-left: 13px;
}

.readonly-mode {
    font-size: large;
    color: #0058ad;
    margin-top: 10px;
}

::ng-deep {
    .custom-slider .ng5-slider {
        .ng5-slider-pointer:after {
            width: 4px;
            height: 4px;
            top: 7px;
            left: 7px;
            border-radius: 4px;
        }

        .ng5-slider-pointer {
            width: 19px;
            height: 19px;
            top: -8px;
            border-radius: 14px;
            margin-left: 4px;
            background-color: #0058ad;
        }

        .ng5-slider-tick {
            background: #0058ad;
        }

        .ng5-slider-bar {
            background: #0058ad;
        }
    }
}

